<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homepage"
            android:icon="@drawable/video_icon_foreground"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/file"
            android:icon="@drawable/music_foreground"
            android:title="@string/audio" />

        <item
            android:id="@+id/share"
            android:icon="@drawable/share_foreground"
            android:title="@string/share" />


    </group>

    <item android:title="More"
        android:icon="@android:drawable/ic_menu_more">
        <menu>

            <item
                android:id="@+id/exit"
                android:title="@string/exit" />


        </menu>
    </item>

</menu>
